--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <title>Matt O'Tousa</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<!-- favicon -->
+  	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=GvJbLybd6z">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png?v=GvJbLybd6z" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png?v=GvJbLybd6z" sizes="16x16">
+	<link rel="manifest" href="/manifest.json?v=GvJbLybd6z">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg?v=GvJbLybd6z" color="#3d668f">
+	<link rel="shortcut icon" href="/favicon.ico?v=GvJbLybd6z">
+	<meta name="theme-color" content="#ffffff">
+  	<!-- end favicon -->
+  
+  
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -14,6 +25,18 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap-social.css">
 	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 	<script src='mysite.js'></script>
+	<!--Google Analytics-->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-83366812-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+	<!--Google Analytics-->
 
 </head>
 <body>
