--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class='container-fluid'>
 				<div class='row white-row'>
 					<div class='col-md-12'>
-						<div class='heightbrick'></div>
+						<div id='top-spacer'></div>
 						<h1 class='center'>Hi, I'm Matt O'Tousa</h1>
 						<h4 class='center'>artist, web developer, audio engineer</h4>
 					</div>
@@ -98,9 +98,9 @@
 							</div>
 						</div>
 					</div>
-					<div class='row inverted-row' style='height: 80px'>
-						<div style='height: 30px'></div>
+					<div class='row inverted-row'>
 						<h6 class='center'>(check 'em out)</h6>
+						<div id='bottom-spacer'></div>
 					</div>
 				</div>
 				<div class='row white-row'>
@@ -114,7 +114,7 @@
 							<div class='textbox textbox-link' data-toggle='modal' data-target='#wasp-modal'>
 								<h1 class='center'>WASP</h1>
 								<img src="wasp-ss.png" alt="Web Audio Signal Processor" class="full-width-img">
-								<h4>Web Audio Signal Processor</h4>
+								<h4>The Web Audio Signal Processor</h4>
 								<!--<h4><a>More Info</a> | <a href='wasp/webAudioEnvironment.html'>Demo</a></h4>-->
 							</div>
 						<!--THE MODAL IT OPENS FOR WASP-->
@@ -129,9 +129,10 @@
 									<div class='modal-body'>
 										<img src="wasp-ss.png" alt="Web Audio Signal Processor" class="full-width-img">
 										<h4>A visual programming environment for the Web Audio API</h4>
-										<p class='left-align'>Currently supports most of the built-in Audio Nodes and allows any signal connection supported by the Web Audio API. Priority one right now is to work out the best way to send control signals (a la Max/MSP), which would allow to send non-signal values between nodes, allowing for greater control and even logic. Once I have settled on a paradigm to send control signals, I will make it so that the simple nodes can be combined into more complex, custom nodes inside WASP itself. Once that is finished, the plan is to allow the user to 'compile' their audio chain down into a javascript function, which would allow developers to make a complex signal path in WASP, then use it in another project.</p>
+										<p class='left-align'>Currently supports most of the built-in Audio Nodes and allows any signal connection supported by the Web Audio API. Priority one right now is to work out the best way to send control signals (a la Max/MSP), which would allow to send non-signal values between nodes, allowing for greater control and even logic.</p>
+										<p class='left-align'>Once I have settled on a paradigm to send control signals, I will make it so that the simple nodes can be combined into more complex, custom nodes inside WASP itself. Once that is finished, the plan is to allow the user to 'compile' their audio chain down into a javascript function, which would allow developers to make a complex signal path in WASP, then use it in another project.</p>							  <h4><a href='wasp/webAudioEnvironment.html'>Live Demo</a></h4>
 										<h4><a href='https://github.com/Tattomoosa/WASP'>GitHub Page</a></h4>
-										<h4><a href='wasp/webAudioEnvironment.html'>Live Demo</a></h4>
+
 										<p>(WASP is open source under the GPL license)</p>
 									</div>
 								</div>	
@@ -141,8 +142,39 @@
 
 						</div>
 
+						<!-- F and D -->
+						<div class='col-sm-6'>
+								<div class='textbox textbox-link' data-toggle='modal' data-target='#aliw-modal'>
+									<h1 class='center'>a life in weeks</h1>
+									<img src="aliw-ss.png" alt="see your life in weeks" class="full-width-img">
+									<h4>Your time in perspective</h4>
+								</div>
+						</div>
+						<!--THE MODAL IT OPENS FOR aliw -->
+						<div class='modal fade' id='aliw-modal' role='dialog'>
+							<div class='modal-dialog'>
+								<!-- MODAL CONTENT -->
+								<div class='modal-content'>
+									<div class='modal-header'>
+										<button type="button" class="close" data-dismiss="modal">&times;</button>
+										<h1 class='center'>a life in weeks</h1>
+									</div>
+									<div class='modal-body'>
+										<img src="aliw-ss.png" alt="Train your ears" class="full-width-img">
+										<h4>Your time in a perhaps unsettling perspective </h4>
+										<p class='left-align'>Inspired by <a href='http://waitbutwhy.com/2014/05/life-weeks.html'>this post</a> from the excellent <a href='http://waitbutwhy.com/'>Wait But Why?</a>, <i>a life in weeks</i> allows you to see how many weeks you have spent alive, and how many you may have left.</p>
+										<p class='left-align'>You input your birthday and either choose a sex (for US life expectancy) or put in a custom last year, and the website generates a chart where every week you've lived is filled in, and every week yet to come is not. It is an unsettling but perhaps helpful way to look atthe passage of time - to reflect on what you've done and what you'd like to, in the limited time you have left.</p>
+										<h4><a href='a-life-in-weeks/aLifeInWeeks.html'>Check it out</a></h4>
+										<h4><a href='https://github.com/Tattomoosa/a-life-in-weeks'>GitHub Page</a></h4>
+										<p>(a life in weeks is open source under the MIT license)</p>
+									</div>
 
+								</div>	
+							</div>
+						</div>
+						<!-- DONE WITH aliw -->
 
+						<!-- F and D -->
 						<div class='col-sm-6'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#fandd-modal'>
 									<h1 class='center'>FREQ+DESTROY</h1>
@@ -162,7 +194,8 @@
 									<div class='modal-body'>
 										<img src="fandd-ss.png" alt="Train your ears" class="full-width-img">
 										<h4>Intuitive, gameified ear training</h4>
-										<p class='left-align'>Ear training games are normally laid out like trivia. Hear a frequency (or musical pitch), click a button that corresponds. Many of them have very limited feedback which does nothing to reinforce or secure your knowledge. Freq + Destroy, however, presents you with the full spectrum and multiple levels of legitimately useful feedback to make it easier than ever to train your ears. Freq + Destroy is designed for use by Audio Engineers looking to learn frequencies by Hz, but plans are in motion for a musical version as well.</p>
+										<p class='left-align'>Ear training games are normally laid out like trivia. Hear a frequency (or musical pitch), click a button that corresponds. Many of them have very limited feedback which does nothing to reinforce or secure your knowledge. Freq + Destroy, however, presents you with the full spectrum and multiple levels of legitimately useful feedback to make it easier than ever to train your ears.</p>
+										<p class='left-align'>Freq + Destroy is designed for use by Audio Engineers looking to learn frequencies by Hz, but plans are in motion for a musical version as well.</p>
 										<h4>No public build available - Check back later!</h4>
 										<p>(FREQ + DESTROY &copy; Matt O'Tousa. All rights reserved)</p>
 									</div>
@@ -170,7 +203,9 @@
 								</div>	
 							</div>
 						</div>
-						<!-- DONE WITH FANDD MODAL -->
+						<!-- DONE WITH F and D -->
+
+						<!-- LOOPS -->
 
 						<div class='col-sm-6'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#loops-modal'>
@@ -192,14 +227,17 @@
 									<div class='modal-body'>
 										<img src="loops-ss.png" alt="Train your ears" class="full-width-img">
 										<h4>Simple looping app for songwriters</h4>
-										<p class='left-align'>Tap to record, tap to loop, tap to stop. Designed mainly for songwriters wanting to try out vocal ideas without having to worry about playing the instruments while they do it. Planned features include basic overdubbing, sync to metronome, and save functionality. But my aim with  Loops is not to do a lot of things, just a few basic features presented in an easy-to-use interface for musicians who don't want to read a whole manual for basic looping functionality.</p>
+										<p class='left-align'>Tap to record, tap to loop, tap to stop. Designed mainly for songwriters wanting to try out vocal ideas without having to worry about playing the instruments while they do it. Planned features include basic overdubbing, sync to metronome, and save functionality.</p>
+										<p class='left-align'>My aim with Loops is not to do a lot of things, however. Just a few basic features presented in an easy-to-use interface for musicians who don't want to read a whole manual for basic looping functionality.</p>
 										<h4>No public build available - check back later!</h4>
 										<p>(loops &copy; Matt O'Tousa. All rights reserved)</p>
 									</div>
 								</div>	
 							</div>
 						</div>
-						<!-- DONE WITH LOOPS MODAL -->
+						<!-- DONE WITH LOOPS -->
+						<!-- WEBSITES -->
+ 
 
 						<div class='col-sm-6'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#sites-modal'>
@@ -234,7 +272,7 @@
 								</div>	
 							</div>
 						</div>
-						<!-- DONE WITH SITES MODAL -->
+						<!-- DONE WITH WEBSITES -->
 					</div>
 				</div>
 				<div class='spacer'></div>
