changed layout of code section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 				<div class='row inverted-row'>
 					<div class='row-container'>
-						<div class='col-sm-6'>
+						<div class='col-sm-6 col-lg-4'>
 							<div class='textbox textbox-link' data-toggle='modal' data-target='#wasp-modal'>
 								<h1 class='center'>WASP</h1>
 								<img src="wasp-ss.png" alt="Web Audio Signal Processor" class="full-width-img">
@@ -143,7 +143,7 @@
 						</div>
 
 						<!-- F and D -->
-						<div class='col-sm-6'>
+						<div class='col-sm-6 col-lg-4'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#aliw-modal'>
 									<h1 class='center'>a life in weeks</h1>
 									<img src="aliw-ss.png" alt="see your life in weeks" class="full-width-img">
@@ -175,7 +175,7 @@
 						<!-- DONE WITH aliw -->
 
 						<!-- F and D -->
-						<div class='col-sm-6'>
+						<div class='col-sm-6 col-lg-4'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#fandd-modal'>
 									<h1 class='center'>FREQ+DESTROY</h1>
 									<img src="fandd-ss.png" alt="Train your ears" class="full-width-img">
@@ -207,7 +207,7 @@
 
 						<!-- LOOPS -->
 
-						<div class='col-sm-6'>
+						<div class='col-sm-6 col-lg-4'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#loops-modal'>
 									<h1 class='center'>loops</h1>
 									<img src="loops-ss.png" alt="Record it then loop it up" class="full-width-img">
@@ -239,7 +239,7 @@
 						<!-- WEBSITES -->
  
 
-						<div class='col-sm-6'>
+						<div class='col-sm-6 col-lg-4'>
 								<div class='textbox textbox-link' data-toggle='modal' data-target='#sites-modal'>
 									<h1 class='center'>Websites</h1>
 									<img src="sites-ss.png" alt="Recursion is fun!" class="full-width-img">
