hi res main image

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 					</div>
 				</div>
 				<div class='row'>
-					<img src="walkdog-crop.jpg" alt="Let's go exploring!" class="full-width-img">
+					<div id='main-img'></div>
+					<!--<img src="walkdog-crop.jpg" alt="Let's go exploring!" class="full-width-img">-->
 				</div>
 				<div class='row white-row'>
 					<div class='col-md-12'>
