cleaning up a bit

--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
 										<img src="wasp-ss.png" alt="Web Audio Signal Processor" class="full-width-img">
 										<h4>A visual programming environment for the Web Audio API</h4>
 										<p class='left-align'>Currently supports most of the built-in Audio Nodes and allows any signal connection supported by the Web Audio API. Priority one right now is to work out the best way to send control signals (a la Max/MSP), which would allow to send non-signal values between nodes, allowing for greater control and even logic.</p>
-										<p class='left-align'>Once I have settled on a paradigm to send control signals, I will make it so that the simple nodes can be combined into more complex, custom nodes inside WASP itself. Once that is finished, the plan is to allow the user to 'compile' their audio chain down into a javascript function, which would allow developers to make a complex signal path in WASP, then use it in another project.</p>							  <h4><a href='WASP/webAudioEnvironment.html'>Live Demo</a></h4>
+										<p class='left-align'>Once I have settled on a paradigm to send control signals, I will make it so that the simple nodes can be combined into more complex, custom nodes inside WASP itself. Once that is finished, the plan is to allow the user to 'compile' their audio chain down into a javascript function, which would allow developers to make a complex signal path in WASP, then use it in another project.</p>
+										<p class='grey-text'>Google Chrome on Desktop recommended</p>
+										<h4><a href='WASP/webAudioEnvironment.html'>Live Demo</a></h4>
 										<h4><a href='https://github.com/Tattomoosa/WASP'>GitHub Page</a></h4>
 
-										<p>(WASP is open source under the GPL license)</p>
+										<p class='grey-text'>(WASP is open source under the GPL license)</p>
 									</div>
 								</div>	
 							</div>
@@ -165,6 +167,7 @@
 										<h4>Your time in a perhaps unsettling perspective </h4>
 										<p class='left-align'>Inspired by <a href='http://waitbutwhy.com/2014/05/life-weeks.html'>this post</a> from the excellent <a href='http://waitbutwhy.com/'>Wait But Why?</a>, <i>a life in weeks</i> allows you to see how many weeks you have spent alive, and how many you may have left.</p>
 										<p class='left-align'>You input your birthday and either choose a sex (for US life expectancy) or put in a custom last year, and the website generates a chart where every week you've lived is filled in, and every week yet to come is not. It is an unsettling but perhaps helpful way to look atthe passage of time - to reflect on what you've done and what you'd like to, in the limited time you have left.</p>
+										<p class='grey-text'>Google Chrome on Desktop recommended</p>
 										<h4><a href='a-life-in-weeks/aLifeInWeeks.html'>Check it out</a></h4>
 										<h4><a href='https://github.com/Tattomoosa/a-life-in-weeks'>GitHub Page</a></h4>
 										<p>(a life in weeks is open source under the MIT license)</p>
