--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 </head>
 <body>
-	<div class='container'>
+	<div class='container' id='navbar-container'>
 		<div class='row'>
 			<div id='navbar'>
 				<span><a href=#>Matt O'Tousa</a></span>
