--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Matt O'Tousa</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
   	<!-- favicon -->
   	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=GvJbLybd6z">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png?v=GvJbLybd6z" sizes="32x32">
