firefox img fix

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 					</div>
 					<div class='row inverted-row'>
 					<div class='circles-row'>
-							<div class='col-sm-3 col-xs-6'>
+							<div class='col-sm-3 col-xs-3'>
 								<a href='#code'><div class='circle'><h1>Code</h1></div></a>
 							</div>
-							<div class='col-sm-3 col-xs-6'>
+							<div class='col-sm-3 col-xs-3'>
 								<a href='#visual'><div class='circle'><h1>Visual</h1></div></a>
 							</div>
-							<div class='col-sm-3 col-xs-6'>
+							<div class='col-sm-3 col-xs-3'>
 								<a href='#audio'><div class='circle'><h1>Audio</h1></div></a>
 							</div>
-							<div class='col-sm-3 col-xs-6'>
+							<div class='col-sm-3 col-xs-3'>
 								<a href='#video'><div class='circle'><h1>Video</h1></div></a>
 							</div>
 						</div>
@@ -388,6 +388,32 @@
 				<div class='row white-row'>
 					<h1 class='center'>CONTACT</h1>
 					<h4 class='center'><a href='mailto:matt@mattotousa.com'>email: matt@mattotousa.com</a></h4>
+					<ul id='contact-social'>
+						<li><a href='https://twitter.com/mlotousa' class="btn btn-lg btn-social-icon btn-twitter">
+							<span class="fa fa-twitter"></span>
+							<p>Twitter</p>
+						</a></li>
+						<li><a href='https://www.instagram.com/mattopaints/' class="btn btn-lg btn-social-icon btn-instagram">
+							<span class="fa fa-instagram"></span>
+							<p>Instagram</p>
+						</a></li>
+						<li><a href='http://www.facebook.com/mattotousa' class="btn btn-lg btn-social-icon btn-facebook">
+							<span class="fa fa-facebook"></span>
+							<p>Facebook</p>
+						</a></li>
+						<li><a href='https://github.com/Tattomoosa'class="btn btn-lg btn-social-icon btn-github">
+							<span class="fa fa-github"></span>
+							<p>GitHub</p>
+						</a></li>
+						<li><a href=https://soundcloud.com/tapedeckrobot' class="btn btn-lg btn-social-icon btn-soundcloud">
+							<span class="fa fa-soundcloud"></span>
+							<p>Soundcloud</p>
+						</a></li>
+						<li><a href='https://www.youtube.com/channel/UCuUTv3O40RzriuN1gQ7ygbw' class="btn btn-lg btn-social-icon btn-youtube">
+							<span class="fa fa-youtube"></span>
+							<p>YouTube</p>
+						</a></li>
+					</ul>
 				</div>
 
 				<div class='row lightblue-row' style='height: 80px;'>
