--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<!-- makes links appear properly on linkedin, etc -->
-	<meta property='og:title' content="Matt O'Tousa's Website"/>
-	<meta property='og:image' content='//mattotousa.com/sites-ss.png'/>
-	<meta property='og:description' content='Portfolio, etc'/>
-	<meta property='og:url' content='//mattotousa.com' />
+	<meta property="og:title" content="Matt O'Tousa's Website"/>
+	<meta property="og:image" content="//http://mattotousa.com/sites-ss.png"/>
+	<meta property="og:description" content="Portfolio, etc"/>
+	<meta property="og:url" content="//http://mattotousa.com" />
 	
   	<!-- favicon -->
   	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=GvJbLybd6z">
