--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <title>Matt O'Tousa</title>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
 	<!-- makes links appear properly on linkedin, etc -->
 	<meta property="og:title" content="Matt O'Tousa's Website"/>
 	<meta property="og:image" content="http://mattotousa.com/sites-ss.png"/>
-	<meta property="og:description" content="Portfolio, etc"/>
+	<meta property="og:description" content="Portfolio Site"/>
 	<meta property="og:url" content="http://mattotousa.com" />
 	
   	<!-- favicon -->
@@ -27,7 +27,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/4f61b27129.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="style.css"
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap-social.css">
 	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 	<script src='mysite.js'></script>
