--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/4f61b27129.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="style.css"
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap-social.css">
 	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 	<script src='mysite.js'></script>
